# thinkflow-studio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  err.txt  output.txt  output_clean.txt  pyproject.toml  requirements.txt
app/: __init__.py
app/agents/: __init__.py  agent_registry.py  coordinator.py  critic.py  framework_selector.py  idea_analyzer.py  planner.py
app/config/: __init__.py  constants.py  lifecycle.py  logging_config.py  providers.py  settings.py
app/core/: base_agent.py  base_tool.py  dependency_container.py  exceptions.py  model_factory.py  session_manager.py  types.py
app/evaluation/: benchmark.py  evaluator.py  sample_cases.py
app/mcp/: __init__.py  registry.py  server.py
app/memory/: __init__.py  memory_service.py  memory_store.py  session_store.py  sqlite_store.py
app/models/: __init__.py
app/orchestrator/: __init__.py  context.py  events.py  pipeline.py  workflow.py
app/schemas/: __init__.py  coordinator.py  critic_analysis.py  execution_plan.py  framework_selection.py  idea_analysis.py
app/security/: scanner.py
app/services/: __init__.py
app/telemetry/: dashboard.py  logger.py  metrics.py  tracer.py
app/tools/: __init__.py
app/ui/: __init__.py  app.py  main.py
app/utils/: __init__.py
assets/screenshots/: README_ASSETS.md
docs/: .gitkeep  API_REFERENCE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_AUDIT.md  TROUBLESHOOTING.md
docs/architecture/: deployment.md  folder_structure.md  memory.md  (+3 more)
tests/: conftest.py
(+42 files in other folders)
